--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ social:
   - https://www.facebook.com/groups/oslo.pm
   - https://www.meetup.com/Oslo-pm
 
+maps_url: "https://maps.google.com/maps?f=q&hl=en&amp;q="
+event_date_format: "%Y-%m-%d %H:%M"
+
 paginate: 10
 paginate_path: "/blog/all/page:num"
 
