Set URL to http://oslo.pm instead of home.oslo.pm

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ event_date_format: "%Y-%m-%d %H:%M"
 paginate: 10
 paginate_path: "/news/all/page:num"
 
+url: http://oslo.pm
+
 permalink: /:year/:month/:day/:title.html
 destination: ./_site
 plugins:
