Mirror http://act.yapc.eu/npw2009

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ social:
 
 designs:
   mojo2014: true
+  npw2009: true
   npw2018: true
 
 maps_url: "https://maps.google.com/maps?f=q&hl=en&amp;q="
