--- a/_data/npw2018.yaml
+++ b/_data/npw2018.yaml
@@ -5,7 +5,7 @@ filter_name: npw2018
 event_url: "https://www.meetup.com/Oslo-pm/events/TODO/"
 
 contact:
-  email: styret@oslo.pm
+  email: npw2018@oslo.pm
 
 pre_conf:
   start: 2018-09-05 18:00:00 +0200
